[package]
name = "openvm-stark-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "SDK for production and testing usage of STARKs."

[dependencies]
stark-backend-v2 = { workspace = true }

p3-baby-bear = { workspace = true }
p3-field = { workspace = true }

hex-literal.workspace = true
itertools.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["alloc"] }
serde_json.workspace = true
rand.workspace = true
metrics = { workspace = true, optional = true }
dashmap.workspace = true
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
metrics-tracing-context.workspace = true
metrics-util.workspace = true
metrics-exporter-prometheus = { workspace = true, features = [
  "push-gateway",
], optional = true }
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
], optional = true }
rustls = { workspace = true, features = ["aws-lc-rs"], optional = true }
eyre.workspace = true
static_assertions.workspace = true

[dev-dependencies]
p3-keccak-air = { workspace = true }
zkhash = { workspace = true }

[features]
default = ["parallel", "metrics"]
parallel = ["stark-backend-v2/parallel"]
mimalloc = ["stark-backend-v2/mimalloc"]
jemalloc = ["stark-backend-v2/jemalloc"]
jemalloc-prof = ["stark-backend-v2/jemalloc-prof"]
metrics = ["dep:metrics", "stark-backend-v2/metrics"]
prometheus = [
  "metrics",
  "dep:metrics-exporter-prometheus",
  "dep:tokio",
  "dep:rustls",
]
