[package]
name = "openvm-stark-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "SDK for production and testing usage of STARKs."

[dependencies]
openvm-stark-backend = { workspace = true }

p3-baby-bear = { workspace = true }
p3-field = { workspace = true }

hex-literal.workspace = true
itertools.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["alloc"] }
serde_json.workspace = true
rand.workspace = true
metrics = { workspace = true, optional = true }
dashmap.workspace = true
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
metrics-tracing-context.workspace = true
metrics-util.workspace = true
metrics-exporter-prometheus = { workspace = true, features = [
  "push-gateway",
], optional = true }
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
], optional = true }
rustls = { workspace = true, features = ["aws-lc-rs"], optional = true }
eyre.workspace = true
static_assertions.workspace = true
derive-new.workspace = true

[dev-dependencies]
p3-keccak-air = { workspace = true }
p3-poseidon2 = { workspace = true }
zkhash = { workspace = true }

[features]
default = ["parallel", "metrics"]
parallel = ["openvm-stark-backend/parallel"]
mimalloc = ["openvm-stark-backend/mimalloc"]
jemalloc = ["openvm-stark-backend/jemalloc"]
jemalloc-prof = ["openvm-stark-backend/jemalloc-prof"]
metrics = ["dep:metrics", "openvm-stark-backend/metrics"]
prometheus = [
  "metrics",
  "dep:metrics-exporter-prometheus",
  "dep:tokio",
  "dep:rustls",
]
